estilos css en home y login

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,17 @@
+<div id="homeContainer">
 <input type="text" placeholder="Buscar amigo"[(ngModel)]="query">
-<br/>
-<b>Amigos</b>
-<ng-container *ngFor=" let user of friends | search: query; let i = index">
+ <br/>
+   <b>Amigos</b>
+        <ng-container *ngFor=" let user of friends | search: query; let i = index">
 	<div>
-	<a routerLink="/conversation/{{user.uid}}">
-	{{i}}.
-	{{ user.nick }} - {{ user.email }}
+	    <a routerLink="/conversation/{{user.uid}}">
+	                 {{i}}.
+	     {{ user.nick }} - {{ user.email }}
 	</a>
 </div>
  </ng-container>
+</div>
+
+
 
 	
