--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,9 @@
-<img id="main-logo" src="assets/img/logo_live.png" alt="Logo de Platzinger">
-<i class="fab fa-angular"></i>
-<a routerLink="/home">Home</a> |
-<a routerLink="/login">login</a> |
-<a routerLink="/profile">profile</a> |
+<div id="menuContainer">
+  <div class="item branding" routerLink="/home">
+  	<img id="main-logo" src="assets/img/logo_live.png" alt="Logo de Platzinger">Platzinger
+    </div>
+   <div class="item" routerLink="/profile">
+     Profile
+  </div>
+	</div>
+	<i class="fab fa-angular"></i>
