--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,3 +3,19 @@
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
+#whiteBorderGlassBox {
+	border: 2px solid rgba (255, 255, 255, .75);
+    padding: 8px;
+}
+
+.homeHeadContainer {
+	background-color: rgba(255, 255, 255, .50);
+}
+.whiteContainerPaidded {
+	padding: 15px;
+	background-color: #feffff;
+}
+img.icon {
+	width: 30px;
+
+}
