estilos en conversation.html2

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -9,7 +9,7 @@
 				<div>
 					<span>Cambiar foto</span><br>
 					 <label class="custom-file-upload">
-					 	<input type="file">Subir Avatar
+					 	<input type="file" class="marbo15">Subir Avatar
 					 </label>
 				</div>
 			</div>
@@ -35,7 +35,9 @@
 					  	<option value="appear_offline">Desconectado</option>
 					  </select>
 				</div>
-             </div>
+			</div>
+			<hr>
+		<a class="btn btn-primary btn-block">Guardar</a>
 		</div>
 	</div>
-</div>
+  </div>
