--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-menu></app-menu>
-   <div class="generalContent">
+<app-menu *ngIf="router.url != '/login'"></app-menu>
+   <div [ngClass]="{'generalContent': router.url !='/login'}">
       <router-outlet></router-outlet>
  </div>
