--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,8 @@
             <span>Online</span>
             <br />
             <span>< Escribe un mensaje Personal ></span>
+            <br>
+              <a  class="btn btn-primary" (click)="logout()">logout </a>
           </div>
         </div>
       </div>
