--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,32 +3,44 @@
 		<div class="row">
 			<div class="col-md-3">
 				<div class="avatarFrameonline">
-					<img src="/assets/img/generic_avatar.png" class="avatarImage img-fluid">
+					<img [src]="croppedImage" class="avatarImage img-fluid">
 				</div>
 				<hr>
 				<div>
 					<span>Cambiar foto</span><br>
 					 <label class="custom-file-upload">
-					 	<input type="file" class="marbo15">Subir Avatar
+					 	<input type="file" (change)="fileChangeEvent($event)" style="visibility:hidden;position:absolute">Subir Avatar
 					 </label>
+					 <br />
 				</div>
 			</div>
-			<div class="col-md-9">
-				<div>
-					<label fixed>Nick</label>
-					  <input type="text" class="form-control">
+			<div class="col-md-9" *ngIf="user">
+				<image-cropper
+    [imageChangedEvent]="imageChangedEvent"
+    [maintainAspectRatio]="true"
+    [aspectRatio]="1 / 1"
+    [resizeToWidth]="128"
+    format="png"
+    (imageCropped)="imageCropped($event)"
+    (imageLoaded)="imageLoaded()"
+    (loadImageFailed)="loadImageFailed()"
+></image-cropper>
+               
+                <div>
+					<label class="col-lg-4 control-label" fixed>Nick</label>
+					  <input [(ngModel)]="user.nick" type="text" class="form-control" >
 				</div>
 			<div>
 				<label fixed>Subnick</label>
-					  <input type="text" class="form-control">
+					  <input [(ngModel)]="user.subnick" type="text" class="form-control">
 				</div>
 				  <div>
 					<label fixed>Email</label>
-					  <input type="email" disabled class="form-control">
+					  <input [(ngModel)]="user.email"type="email" disabled class="form-control">
 				</div>
 				   <div>
 					<label fixed>Status</label>
-					  <select class="form-control">
+					  <select [(ngModel)]="user.status"class="form-control">
 					  	<option value="online">Conectado</option>
 					  	<option value="away">Ausente</option>
 					  	<option value="busy">Ocupado</option>
@@ -36,8 +48,7 @@
 					  </select>
 				</div>
 			</div>
-			<hr>
-		<a class="btn btn-primary btn-block">Guardar</a>
+			<a (click)="saveSettings()" class="btn btn-primary">Guardar</a>
 		</div>
 	</div>
   </div>
